iflib: refactor netmap_fl_refill and fix off-by-one issue

First, fix the initialization of the fl->ifl_rxd_idxs array,
which was affected by an off-by-one bug.
Once there, refactor the function to use better names for
local variables, optimize the variable assignments, and
merge the bus_dmamap_sync() inner loop with the outer one.

PR:	248494
MFC after:	3 weeks


git-svn-id: svn+ssh://svn.freebsd.org/base/head@364164 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f